# Analise_ressalto

./: README.md  README_ETAPA2.md  RESUMO_ETAPA2.md  app.py  app3.py  dados_unidos.csv  juntar.py  packages.txt  pyproject.toml  requirements.txt  teste_dependencias.py
.streamlit/: config.toml
Dados - ressalto - aula do dia 3-3-2025/: x0.0.csv  x0.217.csv  x0.28.csv  x0.325.csv  x0.35.csv  x0.37.csv  x0.42.csv  x0.50.csv  x0.55.csv  x0.60.csv  x0.65.csv  x0.70.csv  x0.75.csv  x0.80.csv  x0.85.csv  x0.90.csv  x0.95.csv  x1.0.csv
